2000-11-29  Brent Welch <welch@ajubasolutions.com>

	* bin/httpd.tcl: Fixed setting of auto_path in the standard
	install configuration so that the limit and crypt packages can
	be found (Peter Farmer)
	* lib/doc.tcl: Added Doc_RegisterRoot so the cgi domain can set up
	the directory mapping used by DocAccessHook. (Peter Farmer)
	* lib/cgi.tcl: Fixed "extra timer" bug found by Petrus that could cause
	erroneous aborts of CGI connections. (Petrus Vloet)
	Added use of Doc_RegisterRoot so DocAccessHook works right for
	/cgi-bin directories outside the htdocs hierarchy.  (Peter Summers)
	Eliminated extra / build-up in /cgi/bin pathnames (Peter Summers)

2000-11-13  Brent Welch <welch@ajubasolutions.com>

	* lib/cgi.tcl: Added checking in CgiCancel in case
	the connection has already gone away.  (Probably redundant)
	* lib/httpd.tcl: Added checking to HttpdCloseFinal in case
	the connection has already gone away.  Seemed like a bug.

2000-10-30  Brent Welch <welch@ajubasolutions.com>

	* lib/pkgIndex.tcl:  Fixed quoting issue when you have
	installed TclHttpd under "Program Files".

2000-10-26  Brent Welch <welch@ajubasolutions.com>

	* lib/cgi.tcl:  fixed POST data handling in light of the
	-readpost change to Url and Httpd.
	* lib/counter.tcl: Explicitly initialize cgihits counter
	* lib/version.tcl: Changed version to 3.2.1

2000-10-20  Brent Welch <welch@ajubasolutions.com>
    
	* DIST_build/Makefile.boot: Fixed installation of Tcllib
	* bin/httpdthread.tcl:
	* bin/httpd.tcl: Fixed counter initialization for threaded case.
	* lib/counter.tcl: Fixed broken counter initialization
	* lib/httpd.tcl: Removed Counter_Reset call as it gets in
	the way of counter initialization.
	* lib/status.tcl: Removed 0-valued counters from table display.
	* Tagged and released 3.2

2000-10-19  Brent Welch <welch@ajubasolutions.com>
    
	* bin/httpd.tcl: Fixed error handling around SSL startup.
	* lib/httpd.tcl: Fixed Httpd_Suspend/Httpd_Resume usage that